   runs in a separate kernel thread, so we synchronize ToDevice send
   operations in kernel with a bit lock (dev->tbusy).

** Every Linux kernel module now runs as a separate kernel thread, even if
   HAVE_POLLING is not defined.

** The click user-level driver can now automatically compile any required
   package sources. (Click-install has been able to do this for a while.)

* Tools

** click-xform: Bug fixes and performance improvements. Also, click-xform
   tries to preserve element names from the original configuration. If a
   pattern element and a replacement element share a name, then when the
   pattern is applied, the replacing element will use the name of the
   original element that corresponded to the pattern element. (Phew!)

** click-devirtualize: Bug fixes. It also uses standards-compliant C++.

** click-fastclassifier can combine adjacent Classifiers.

** Added click-combine and click-uncombine.

* Elements

** Removed UnlimitedElement in favor of `notify_n{in,out}puts()'.

** Removed Broadcast in favor of Tee.

** Added select_fd() and selected() to ToBPF.

* Configurations

** Added conf/make-udpgen.pl, a Perl script that generates a udpgen-like
   Click configuration.

** Added conf/make-udpcount.pl, a Perl script that generates a
   udpcount-like Click configuration.


Version 1.0.4   13.Apr.2000

* Changed how FromDevice, ToDevice, and PollDevice interact with each
  other. Before, if you specify just PollDevice w/o ToDevice, the tx queue
  does not get cleaned because in polling mode tx queue cleaning must be
  scheduled explicitly. Now, PollDevice looks for a ToDevice on the same
  device. If no such element exists, it remembers to clean the tx queue
  itself. Also ToDevice looks for a PollDevice to decide if it should use
  polling extensions. Some of this code was in the 1.0.3 release, but there
  was a bug.

* New linux kernel patch (etc/linux-2.2.14-patch): locks are added to protect