@@ -78,6 +78,7 @@ ARPQuerier::configure(const String &conf, ErrorHandler *errh)
 int
 ARPQuerier::initialize(ErrorHandler *)
 {
+  _expire_timer.attach(this);
   _expire_timer.schedule_after_ms(EXPIRE_TIMEOUT_MS);
   _arp_queries = 0;
   _pkts_killed = 0;
