@@ -52,6 +52,7 @@ Burster::configure(const String &conf, ErrorHandler *errh)
 int
 Burster::initialize(ErrorHandler *)
 {
+  _timer.attach(this);
   _timer.schedule_after_ms(_interval);
   return 0;
 }
