@@ -44,6 +44,7 @@ TimedSource::configure(const String &conf, ErrorHandler *errh)
 int
 TimedSource::initialize(ErrorHandler *)
 {
+  _timer.attach(this);
   _timer.schedule_after_ms(_interval);
   return 0;
 }
