@@ -17,41 +17,67 @@
 #include "element.hh"
 #include "router.hh"
 
+Timer::Timer()
+  : _prev(this), _next(this), _hook(head_hook), _thunk(0), _head(this)
+{
+}
+
+Timer::Timer(Timer *head, TimerHook hook, unsigned long thunk)
+  : _prev(0), _next(0), _hook(hook), _thunk(thunk), _head(head)
+{
+  assert(_head->is_head());
+}
+
+Timer::Timer(TimerHook hook, unsigned long thunk)
+  : _prev(0), _next(0), _hook(hook), _thunk(thunk), _head(0)
+{
+}
+
+Timer::Timer(Element *e)
+  : _prev(0), _next(0), _hook(element_hook), _thunk((unsigned long)e), _head(0)
+{
+}
+
+void
+Timer::head_hook(unsigned long)
+{
+  assert(0);
+}
+
 /*
- * Timer::element_timer is a callback that gets called when a Timer,
+ * Timer::element_hook is a callback that gets called when a Timer,
  * constructed with just an Element instance, expires. 
  * 
- * When this is used in kernel interrupt mode, this callback gets called in
- * the timer_bh of the kernel. Since linux kernel bottom halves are not
- * reentrant (i.e. only ONE bottom half handler can be executing at a time -
- * see kernel/softirq.c), this will not cause any race conditions with
- * router->driver() in FromDevice.
- *
  * When used in userlevel or kernel polling mode, timer is maintained by
- * Click, so Timer::element_timer is called within click.
+ * Click, so Timer::element_hook is called within Click.
  */
 
 void
-Timer::element_timer(unsigned long thunk)
+Timer::element_hook(unsigned long thunk)
 {
-  Element *f = (Element *)thunk;
+  Element *e = (Element *)thunk;
   /* put itself on the work list */
-  f->schedule_immediately();	// might not have tickets
+  e->schedule_immediately();	// might not have tickets
 }
 
-#if 1 || !defined(__KERNEL__) || defined(HAVE_POLLING)
-
-static Timer timer_head(0, (unsigned long)0);
+void
+Timer::attach(Router *r)
+{
+  assert(!attached());
+  attach(r->timer_head());
+}
 
 void
-Timer::static_initialize()
+Timer::attach(Element *e)
 {
-  timer_head._prev = timer_head._next = 0;
+  assert(!attached());
+  attach(e->router()->timer_head());
 }
 
 void
 Timer::schedule_after_ms(int ms)
 {
+  assert(!is_head() && attached());
   if (scheduled())
     unschedule();
   click_gettimeofday(&_expires);
@@ -59,16 +85,16 @@ Timer::schedule_after_ms(int ms)
   interval.tv_sec = ms / 1000;
   interval.tv_usec = (ms % 1000) * 1000;
   timeradd(&_expires, &interval, &_expires);
-  Timer *prev = &timer_head;
-  Timer *trav;
-  for (trav = prev->_next;
-       trav && timercmp(&_expires, &trav->_expires, >);
-       prev = trav, trav = trav->_next)
-    /* nada */;
+  Timer *prev = _head;
+  Timer *trav = prev->_next;
+  while (trav != _head && timercmp(&_expires, &trav->_expires, >)) {
+    prev = trav;
+    trav = trav->_next;
+  }
   _prev = prev;
   _next = trav;
   _prev->_next = this;
-  if (trav) trav->_prev = this;
+  trav->_prev = this;
 }
 
 void
@@ -76,22 +102,23 @@ Timer::unschedule()
 {
   if (scheduled()) {
     _prev->_next = _next;
-    if (_next) _next->_prev = _prev;
+    _next->_prev = _prev;
     _prev = _next = 0;
   }
 }
 
 void
-Timer::run_timers()
+Timer::run()
 {
+  assert(is_head());
   struct timeval now;
   click_gettimeofday(&now);
-  Timer *next;
-  while ((next = timer_head._next) && !timercmp(&next->_expires, &now, >)) {
-    timer_head._next = next->_next;
-    if (next->_next) next->_next->_prev = &timer_head;
-    next->_next = next->_prev = 0;
-    next->_hook(next->_thunk);
+  while (_next != this && !timercmp(&_next->_expires, &now, >)) {
+    Timer *t = _next;
+    _next = t->_next;
+    _next->_prev = this;
+    t->_prev = 0;
+    t->_hook(t->_thunk);
   }
 }
 
@@ -99,23 +126,21 @@ Timer::run_timers()
 int
 Timer::get_next_delay(struct timeval *tv)
 {
-  Timer *next;
-  if((next = timer_head._next) == 0){
+  assert(is_head());
+  if (_next == this) {
     tv->tv_sec = 1000;
     tv->tv_usec = 0;
-    return(0);
+    return 0;
   } else {
     struct timeval now;
     click_gettimeofday(&now);
-    if(timercmp(&next->_expires, &now, >)){
-      timersub(&next->_expires, &now, tv);
+    if(timercmp(&_next->_expires, &now, >)){
+      timersub(&_next->_expires, &now, tv);
     } else {
       tv->tv_sec = 0;
       tv->tv_usec = 0;
     }
-    return(1);
+    return 1;
   }  
 }
-
-#endif /* !__KERNEL__ || HAVE_POLLING */
 
